--- a/app/javascript/packs/main.css
+++ b/app/javascript/packs/main.css
@@ -1,7 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    color: black;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
-    background: #FFEEDB;
-    color: #4D4847;
+    background: #ccdbdc;
+}
+
+.NavBar {
+    background: #93A3B1;
+    display: flex;
+    height: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+.NavBar .nav-title {
+    margin-left: 5px;
+}
+
+.NavBar a {
+    text-decoration: unset;
+}
+
+.Spaces-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+
+.Space-card {
+	border-radius: 5px;
+	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.75);
+    height: 575px;
+    max-width: 600px;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.Space-card img {
+    height: 400px;
+    width: 500px;
 }
